--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -548,5 +548,6 @@
     "Sender profile picture": "Photo de profil de l'exp\u00e9diteur",
     "Receiver profile picture": "Photo de profil du destinataire",
     "Carbon copy receiver profile picture": "Photo de profil du destinataire en copie carbone",
-    "Explore more courses": "Explorer plus de cours"
+    "Explore more courses": "Explorer plus de cours",
+    "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:"
 }
