Language: Fix language variables (singular needs to be plural) in course home

--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -1,12 +1,14 @@
 {
     "Agenda": "Axenda",
     "Announcement": "Anuncies",
+    "Announcements": "Anuncies",
     "Course description": "Descripci\u00f3n del cursu",
     "Documents": "Documentos",
     "Tests": "Exercicios",
     "Forum": "Foros",
     "Glossary": "Glosariu",
     "Link": "Enllaces",
+    "Links": "Enllaces",
     "Groups": "Grupos",
     "Member": "Usuariu",
     "Survey": "Encuesta",
