--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -1,6 +1,7 @@
 {
     "Announcement": "Ozn\u00e1men\u00ed",
     "Tests": "Testy",
+    "Links": "Linky",
     "Groups": "Skupiny",
     "Member": "\u010clen",
     "Tracking": "Tracking",
