--- a/assets/locales/da.json
+++ b/assets/locales/da.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "Kalender",
     "Announcement": "Meddelelser",
+    "Announcements": "Meddelelser",
     "Documents": "Dokumenter",
     "Tests": "\u00d8velser",
     "Forum": "Diskussionsfora",
     "Link": "Link",
+    "Links": "Links",
     "Groups": "Grupper",
     "Member": "Medlem",
     "Survey": "Evaluering",
