--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Gruppen-Kalender",
     "Announcement": "Ank\u00fcndigung",
+    "Announcements": "Gruppen-Ank\u00fcndigungen",
     "Attendance": "Anwesenheit",
+    "Attendances": "Anwesenheiten",
     "Course description": "Kursbeschreibung",
     "Course progress": "Kurs-Themen",
     "Documents": "Dokumente",
@@ -9,9 +11,11 @@
     "Forum": "Forum",
     "Glossary": "Lexikon",
     "Link": "Link",
+    "Links": "Links",
     "Groups": "Gruppen",
     "Member": "Mitglied",
     "Survey": "Umfrage",
+    "Surveys": "Umfragen",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
