--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Avisos",
+    "Announcements": "Anuncios",
     "Attendance": "Asistencia",
+    "Attendances": "Asistencia",
     "Course description": "Descripci\u00f3n del curso",
     "Course progress": "Programaci\u00f3n did\u00e1ctica",
     "Documents": "Documentos",
@@ -9,9 +11,11 @@
     "Forum": "Foro",
     "Glossary": "Glosario",
     "Link": "Enlaces",
+    "Links": "Enlaces",
     "Groups": "Grupos",
     "Member": "Usuario",
     "Survey": "Encuesta",
+    "Surveys": "Encuestas",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
