--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Abisua",
+    "Announcements": "Abisuak",
     "Attendance": "Parte hartzea",
+    "Attendances": "Parte hartzeak",
     "Course description": "Ikastaroaren azalpena",
     "Course progress": "Ikastaroaren aurrerapena",
     "Documents": "Dokumentuak",
@@ -9,9 +11,11 @@
     "Forum": "Foroa",
     "Glossary": "Glosarioa",
     "Link": "Lotura",
+    "Links": "Loturak",
     "Groups": "Taldeak",
     "Member": "Kidea",
     "Survey": "Inkesta",
+    "Surveys": "Inkestak",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
