--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -1,14 +1,18 @@
 {
     "Announcement": "Ilmoitus",
+    "Announcements": "Ilmoitukset",
+    "Attendances": "L\u00e4sn\u00e4",
     "Course description": "Kurssin kuvaus",
     "Course progress": "Kurssin edistyminen",
     "Documents": "Dokumentit",
     "Tests": "Testit",
     "Forum": "Keskustelut",
     "Glossary": "Sanasto",
+    "Links": "Linkit",
     "Groups": "Ryhm\u00e4t",
     "Member": "J\u00e4sen",
     "Survey": "Kysely",
+    "Surveys": "Kyselyt",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
