--- a/assets/locales/fo_FO.json
+++ b/assets/locales/fo_FO.json
@@ -1,5 +1,6 @@
 {
     "Tests": "Royndir",
+    "Links": "Leinkjur",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
