--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Annonces",
+    "Announcements": "Annonces",
     "Attendance": "Pr\u00e9sence",
+    "Attendances": "Pr\u00e9sences",
     "Course description": "Description du cours",
     "Course progress": "Progression du cours",
     "Documents": "Documents",
@@ -9,9 +11,11 @@
     "Forum": "Forums",
     "Glossary": "Glossaire",
     "Link": "Lien",
+    "Links": "Liens",
     "Groups": "Groupes",
     "Member": "Utilisateur",
     "Survey": "Enqu\u00eate",
+    "Surveys": "Enqu\u00eates",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
