--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "\u05e1\u05d3\u05e8 \u05d9\u05d5\u05dd",
     "Announcement": "\u05d4\u05d5\u05d3\u05e2\u05d5\u05ea",
+    "Announcements": "\u05d4\u05d5\u05d3\u05e2\u05d5\u05ea",
     "Attendance": "\u05e0\u05d5\u05db\u05d7\u05d5\u05ea",
+    "Attendances": "\u05d4\u05d5\u05e4\u05e2\u05d5\u05ea",
     "Course description": "\u05ea\u05d9\u05d0\u05d5\u05e8 \u05d4\u05e7\u05d5\u05e8\u05e1",
     "Course progress": "\u05d4\u05ea\u05e7\u05d3\u05de\u05d5\u05ea \u05d4\u05e7\u05d5\u05e8\u05e1",
     "Documents": "\u05de\u05e1\u05de\u05db\u05d9\u05dd",
@@ -9,9 +11,11 @@
     "Forum": "\u05e4\u05d5\u05e8\u05d5\u05dd",
     "Glossary": "\u05de\u05d9\u05dc\u05d5\u05df \u05de\u05d5\u05e0\u05d7\u05d9\u05dd",
     "Link": "\u05e7\u05d9\u05e9\u05d5\u05e8",
+    "Links": "\u05e7\u05d9\u05e9\u05d5\u05e8\u05d9\u05dd",
     "Groups": "\u05e7\u05d1\u05d5\u05e6\u05d5\u05ea",
     "Member": "\u05d7\u05d1\u05e8",
     "Survey": "\u05e1\u05e7\u05e8",
+    "Surveys": "\u05e1\u05e7\u05e8\u05d9\u05dd",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
