--- a/assets/locales/hr_HR.json
+++ b/assets/locales/hr_HR.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "Raspored",
     "Announcement": "Obavijest",
+    "Announcements": "Obavijesti",
     "Documents": "Dokumenti",
     "Tests": "Vje\u017ebe",
     "Forum": "Forumi",
     "Link": "Poveznica",
+    "Links": "Poveznice",
     "Groups": "Grupe",
     "Member": "\u010clan",
     "Survey": "Anketa",
