--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "Napt\u00e1r",
     "Announcement": "Bejelent\u00e9s",
+    "Announcements": "Hirdetm\u00e9nyek",
     "Documents": "Dokumentumok",
     "Tests": "Tesztek",
     "Forum": "F\u00f3rumok",
     "Link": "Hivatkoz\u00e1s",
+    "Links": "Hivatkoz\u00e1sok",
     "Groups": "Csoportok",
     "Member": "Tag",
     "Survey": "K\u00e9rd\u0151\u00edv",
