--- a/assets/locales/id_ID.json
+++ b/assets/locales/id_ID.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Pengumuman",
+    "Announcements": "Pengumuman",
     "Documents": "Dokumen",
     "Tests": "Latihan/Ujian",
     "Forum": "Forum",
     "Link": "Link",
+    "Links": "Link",
     "Groups": "Groups",
     "Member": "Anggota",
     "Tracking": "Tracking",
