--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Avviso",
+    "Announcements": "Avvisi",
     "Attendance": "Presenze",
+    "Attendances": "Presenze",
     "Course description": "Informazioni sul corso",
     "Course progress": "Avanzamento Corso",
     "Documents": "Documenti",
@@ -9,9 +11,11 @@
     "Forum": "Forum",
     "Glossary": "Glossario",
     "Link": "Collegamento",
+    "Links": "Collegamenti",
     "Groups": "Gruppi",
     "Member": "Membro",
     "Survey": "Questionario",
+    "Surveys": "Questionari",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
