--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,12 +1,16 @@
 {
     "Agenda": "\u4e88\u5b9a\u8868",
+    "Announcements": "\u304a\u77e5\u3089\u305b",
     "Attendance": "\u51fa\u5e2d",
+    "Attendances": "\u51fa\u5e2d",
     "Course progress": "\u30b3\u30fc\u30b9\u306e\u9032\u884c\u72b6\u6cc1",
     "Documents": "\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8",
     "Tests": "\u30c6\u30b9\u30c8",
     "Forum": "\u30d5\u30a9\u30fc\u30e9\u30e0",
     "Glossary": "\u7528\u8a9e\u96c6",
+    "Links": "\u30ea\u30f3\u30af",
     "Survey": "\u610f\u898b\u8abf\u67fb",
+    "Surveys": "\u610f\u898b\u8abf\u67fb",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
