--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -4,6 +4,7 @@
     "Tests": "\ud14c\uc2a4\ud2b8",
     "Forum": "\ud3ec\ub7fc",
     "Link": "\ub9c1\ud06c",
+    "Links": "\ub9c1\ud06c",
     "Groups": "\uadf8\ub8f9",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
