--- a/assets/locales/lt_LT.json
+++ b/assets/locales/lt_LT.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "Darbotvark\u0117",
     "Announcement": "Skelbimas",
+    "Announcements": "Prane\u0161imai",
     "Documents": "Dokumentai",
     "Tests": "Testai",
     "Forum": "Forumai",
     "Link": "Nuoroda",
+    "Links": "Nuorodos",
     "Groups": "Grup\u0117s",
     "Member": "Narys",
     "Survey": "Apklausa",
