--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Dienas k\u0101rt\u012bba",
     "Announcement": "Pazi\u0146ojums",
+    "Announcements": "Pazi\u0146ojumi kursa lietot\u0101jiem",
     "Attendance": "Kl\u0101tienes nodarb\u012bbas",
+    "Attendances": "Kl\u0101tienes nodarb\u012bbas",
     "Course description": "Kursa apraksts",
     "Course progress": "Kursa apguves tematiskais pl\u0101ns",
     "Documents": "Dokumenti",
@@ -9,9 +11,11 @@
     "Forum": "Diskusijas kurs\u0101",
     "Glossary": "Terminu skaidrojumu v\u0101rdn\u012bca",
     "Link": "Hipersaite",
+    "Links": "Ievietot Hipersai\u0161u arh\u012bv\u0101 eso\u0161as t\u012bmek\u013ca hipersaites",
     "Groups": "Grupas",
     "Member": "Biedrs",
     "Survey": "Aptaujas kurs\u0101",
+    "Surveys": "Aptaujas",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
