--- a/assets/locales/ms_MY.json
+++ b/assets/locales/ms_MY.json
@@ -2,6 +2,7 @@
     "Documents": "Dokumen",
     "Forum": "Forum",
     "Link": "Pautan",
+    "Links": "Pautan",
     "Groups": "Kumpulan",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
