--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Mededeling",
+    "Announcements": "Aankondigingen",
     "Attendance": "Aanwezigheid",
+    "Attendances": "Aanwezigheid",
     "Course description": "Cursusomschrijving",
     "Course progress": "Voortgang",
     "Documents": "Documenten",
@@ -9,9 +11,11 @@
     "Forum": "Forums",
     "Glossary": "Woordenlijst",
     "Link": "Link",
+    "Links": "Links",
     "Groups": "Groepen",
     "Member": "Gebruiker",
     "Survey": "Enquete",
+    "Surveys": "Enquete",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
