--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Terminarz",
     "Announcement": "Og\u0142oszenie",
+    "Announcements": "Og\u0142oszenia",
     "Attendance": "Obecno\u015b\u0107",
+    "Attendances": "Obecno\u015bci",
     "Course description": "Opis kursu",
     "Course progress": "Post\u0119p kursu",
     "Documents": "Dokumenty",
@@ -9,9 +11,11 @@
     "Forum": "Fora",
     "Glossary": "S\u0142ownik",
     "Link": "Odno\u015bniki",
+    "Links": "Linki",
     "Groups": "Grupy",
     "Member": "U\u017cytkownik",
     "Survey": "Ankieta",
+    "Surveys": "Ankiety",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
