--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "An\u00fancio",
+    "Announcements": "An\u00fancios",
     "Attendance": "Presen\u00e7as",
+    "Attendances": "Presen\u00e7as",
     "Course description": "Descri\u00e7\u00e3o do curso",
     "Course progress": "Progresso no curso",
     "Documents": "Documentos",
@@ -9,9 +11,11 @@
     "Forum": "F\u00f3runs",
     "Glossary": "Gloss\u00e1rio",
     "Link": "Liga\u00e7\u00e3o/link",
+    "Links": "Liga\u00e7\u00f5es/links",
     "Groups": "Grupos",
     "Member": "Membro",
     "Survey": "Question\u00e1rio",
+    "Surveys": "Pesquisas",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
