--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -1,11 +1,13 @@
 {
     "Agenda": "Ruwana",
     "Announcement": "Willaykuna",
+    "Announcements": "Willaykuna",
     "Documents": "Qelqa khipukuna",
     "Tests": "Llank'aynakuna",
     "Forum": "Rimarinakuykuna",
     "Glossary": "Glosario nisqa",
     "Link": "Waskhanakuna",
+    "Links": "Waskhanakuna",
     "Groups": "Hu\u00f1usqakuna",
     "Member": "Haykuqmasi",
     "Survey": "Tapukuy",
