--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -1,16 +1,20 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Anunt",
+    "Announcements": "Anunturi",
     "Attendance": "Asistenta",
+    "Attendances": "Asistenta",
     "Course description": "Descrierea cursului",
     "Documents": "Documente",
     "Tests": "Exercitii",
     "Forum": "Forumuri",
     "Glossary": "Glosariu",
     "Link": "Legatura",
+    "Links": "Linkuri",
     "Groups": "Grupuri",
     "Member": "Uzuar",
     "Survey": "Ancheta",
+    "Surveys": "Sondaje",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
