--- a/assets/locales/ru_RU.json
+++ b/assets/locales/ru_RU.json
@@ -1,14 +1,17 @@
 {
     "Agenda": "\u0420\u0430\u0441\u043f\u0438\u0441\u0430\u043d\u0438\u0435",
     "Announcement": "\u041e\u0431\u044a\u044f\u0432\u043b\u0435\u043d\u0438\u0435",
+    "Announcements": "\u041e\u0431\u044a\u044f\u0432\u043b\u0435\u043d\u0438\u044f",
     "Course progress": "\u041f\u0440\u043e\u0433\u0440\u0435\u0441\u0441 \u043f\u043e \u043a\u0443\u0440\u0441\u0443",
     "Documents": "\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b",
     "Tests": "\u0422\u0435\u0441\u0442\u044b",
     "Forum": "\u0424\u043e\u0440\u0443\u043c\u044b",
     "Link": "\u0421\u0441\u044b\u043b\u043a\u0430",
+    "Links": "\u0421\u0441\u044b\u043b\u043a\u0438",
     "Groups": "\u0413\u0440\u0443\u043f\u043f\u044b",
     "Member": "\u0427\u043b\u0435\u043d",
     "Survey": "\u041e\u043f\u0440\u043e\u0441",
+    "Surveys": "\u041e\u043f\u0440\u043e\u0441\u043d\u0438\u043a\u0438",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
