--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Oznam",
+    "Announcements": "Oznamy",
     "Attendance": "Doch\u00e1dzka",
+    "Attendances": "Doch\u00e1dzka",
     "Course description": "Popis kurzu",
     "Course progress": "Pokrok v kurze",
     "Documents": "Dokumenty",
@@ -9,9 +11,11 @@
     "Forum": "F\u00f3rum",
     "Glossary": "Slovn\u00edk",
     "Link": "Odkaz",
+    "Links": "Odkazy",
     "Groups": "Skupiny",
     "Member": "\u010clen",
     "Survey": "Prieskum",
+    "Surveys": "Prieskum",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
