--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Obvestilo",
+    "Announcements": "Obvestila",
     "Attendance": "Prisotnost",
+    "Attendances": "Prisotnosti",
     "Course description": "Podrobnosti te\u010daja",
     "Course progress": "Napredek te\u010daja",
     "Documents": "Dokumenti",
@@ -9,9 +11,11 @@
     "Forum": "Forumi",
     "Glossary": "Glosarij",
     "Link": "Povezava",
+    "Links": "Povezave",
     "Groups": "Skupine",
     "Member": "\u010clan",
     "Survey": "Evalvacijski vpra\u0161alnik",
+    "Surveys": "Evalvacijski vpra\u0161alniki",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
