--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -5,6 +5,7 @@
     "Tests": "Testovi",
     "Forum": "Forumi",
     "Link": "Link",
+    "Links": "Linkovi",
     "Groups": "Grupe",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
