--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -1,14 +1,17 @@
 {
     "Agenda": "Kalender",
     "Announcement": "Tillk\u00e4nnagivande",
+    "Announcements": "Information",
     "Course progress": "Kurs utveckling",
     "Documents": "Dokument",
     "Tests": "Tester",
     "Forum": "Forum",
     "Link": "L\u00e4nk",
+    "Links": "L\u00e4nkar",
     "Groups": "Grupper",
     "Member": "Medlem",
     "Survey": "Enk\u00e4ter",
+    "Surveys": "Unders\u00f6kning",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
