--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -1,12 +1,16 @@
 {
     "Agenda": "Agenda",
+    "Announcements": "Mga Anunsyo",
     "Attendance": "Pagdalo",
+    "Attendances": "Mga Pagdalo",
     "Course progress": "Progreso ng kurso",
     "Documents": "Mga Dokumento",
     "Tests": "Mga Pagsusulit",
     "Forum": "Forum",
     "Glossary": "Talahulugan",
+    "Links": "Mga Link",
     "Survey": "Sarbey",
+    "Surveys": "Mga Sarbey",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
