--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -1,11 +1,13 @@
 {
     "Agenda": "Takvim",
     "Announcement": "Duyuru",
+    "Announcements": "Duyurular",
     "Course description": "Kurs detaylar\u0131",
     "Documents": "Belgeler",
     "Tests": "Al\u0131\u015ft\u0131rmalar",
     "Forum": "Forumlar",
     "Link": "Ba\u011flant\u0131",
+    "Links": "Ba\u011flant\u0131lar",
     "Groups": "Gruplar",
     "Member": "\u00dcye",
     "Tracking": "Tracking",
