--- a/assets/locales/vi_VN.json
+++ b/assets/locales/vi_VN.json
@@ -2,6 +2,7 @@
     "Documents": "t\u00e0i li\u1ec7u",
     "Forum": "Forum",
     "Link": "Li\u00ean k\u1ebft",
+    "Links": "Li\u00ean k\u1ebft",
     "Groups": "S\u1eeda Nh\u00f3m",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
