--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -1,16 +1,20 @@
 {
     "Agenda": "\u8bae\u7a0b",
     "Announcement": "\u901a\u77e5",
+    "Announcements": "\u5e03\u544a",
     "Attendance": "\u8003\u52e4",
+    "Attendances": "\u8003\u52e4",
     "Course progress": "\u8bfe\u7a0b\u8fdb\u5ea6",
     "Documents": "\u6587\u6863",
     "Tests": "\u6d4b\u9a8c",
     "Forum": "\u8bba\u575b",
     "Glossary": "\u8bcd\u6c47\u8868",
     "Link": "\u94fe\u63a5",
+    "Links": "\u94fe\u63a5",
     "Groups": "\u5c0f\u7ec4",
     "Member": "\u6210\u5458",
     "Survey": "\u8c03\u67e5",
+    "Surveys": "\u8c03\u67e5",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
