--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "\u65e5\u7a0b",
     "Announcement": "\u901a\u77e5",
+    "Announcements": "\u516c\u544a",
     "Documents": "\u6587\u6a94",
     "Tests": "\u6e2c\u9a57",
     "Forum": "\u8a0e\u8ad6\u5340",
     "Link": "\u93c8\u63a5",
+    "Links": "\u9023\u7d50",
     "Groups": "\u5c0f\u7d44",
     "Member": "\u6703\u54e1",
     "Survey": "\u7d71\u8a08\u8abf\u67e5",
