--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "\u0627\u0644\u0623\u062c\u0646\u062f\u0629",
     "Announcement": "\u062a\u0628\u0644\u064a\u063a",
+    "Announcements": "\u0627\u0644\u062a\u0628\u0644\u064a\u063a\u0627\u062a",
     "Attendance": "\u0627\u0644\u062d\u0636\u0648\u0631",
+    "Attendances": "\u0627\u0644\u062d\u0636\u0648\u0631",
     "Course description": "\u0648\u0635\u0641 \u0627\u0644\u0645\u0642\u0631\u0631",
     "Course progress": "\u0627\u0644\u062a\u0642\u062f\u0645 \u0641\u064a \u0627\u0644\u0645\u0642\u0631\u0631",
     "Documents": "\u0627\u0644\u0645\u0633\u062a\u0646\u062f\u0627\u062a",
@@ -9,9 +11,11 @@
     "Forum": "\u0627\u0644\u0645\u0646\u062a\u062f\u0649",
     "Glossary": "\u0642\u0627\u0645\u0648\u0633",
     "Link": "\u0627\u0644\u0631\u0627\u0628\u0637",
+    "Links": " \u0631\u0648\u0627\u0628\u0637",
     "Groups": "\u0627\u0644\u0645\u062c\u0645\u0648\u0639\u0627\u062a",
     "Member": "\u0627\u0644\u0639\u0636\u0648",
     "Survey": "\u0627\u0633\u062a\u0637\u0644\u0627\u0639",
+    "Surveys": "\u0627\u0644\u0627\u0633\u062a\u0628\u064a\u0627\u0646\u0627\u062a",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
