--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Anunci",
+    "Announcements": "Avisos",
     "Attendance": "Assist\u00e8ncia",
+    "Attendances": "Assist\u00e8ncia",
     "Course description": "Detalls del curs",
     "Course progress": "Programaci\u00f3 did\u00e0ctica",
     "Documents": "Documents",
@@ -9,9 +11,11 @@
     "Forum": "F\u00f2rums",
     "Glossary": "Glossari",
     "Link": "Enlla\u00e7",
+    "Links": "Enlla\u00e7os",
     "Groups": "Grups",
     "Member": "Usuari",
     "Survey": "Enquesta",
+    "Surveys": "Enquestes",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
