--- a/assets/locales/el.json
+++ b/assets/locales/el.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "\u0391\u03c4\u03b6\u03ad\u03bd\u03c4\u03b1",
     "Announcement": "\u0391\u03bd\u03b1\u03ba\u03bf\u03af\u03bd\u03c9\u03c3\u03b7",
+    "Announcements": "\u0391\u03bd\u03b1\u03ba\u03bf\u03b9\u03bd\u03ce\u03c3\u03b5\u03b9\u03c2",
     "Attendance": "\u03a0\u03b1\u03c1\u03bf\u03c5\u03c3\u03af\u03b1",
+    "Attendances": "\u03a3\u03c5\u03bc\u03bc\u03b5\u03c4\u03bf\u03c7\u03ad\u03c2",
     "Course description": "\u03a0\u03b5\u03c1\u03b9\u03b3\u03c1\u03b1\u03c6\u03ae \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2",
     "Course progress": "\u03a0\u03c1\u03cc\u03bf\u03b4\u03bf\u03c2 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2",
     "Documents": "\u0388\u03b3\u03b3\u03c1\u03b1\u03c6\u03b1",
@@ -9,9 +11,11 @@
     "Forum": "\u03a0\u03b5\u03c1\u03b9\u03bf\u03c7\u03ae \u03c3\u03c5\u03b6\u03b7\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd",
     "Glossary": "\u0393\u03bb\u03c9\u03c3\u03c3\u03ac\u03c1\u03b9",
     "Link": "\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03bc\u03bf\u03c2",
+    "Links": "\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03bc\u03bf\u03b9",
     "Groups": "\u039f\u03bc\u03ac\u03b4\u03b5\u03c2",
     "Member": "\u039c\u03ad\u03bb\u03bf\u03c2",
     "Survey": "\u0391\u03c0\u03bf\u03b3\u03c1\u03b1\u03c6\u03ae",
+    "Surveys": "\u0391\u03c0\u03bf\u03b3\u03c1\u03b1\u03c6\u03ad\u03c2",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
