--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "Agendo",
     "Announcement": "Komuniko",
+    "Announcements": "Anoncoj",
     "Documents": "Dokumentoj",
     "Tests": "Ekzercoj XX",
     "Forum": "Forumoj",
     "Link": "Ligilo",
+    "Links": "Ligiloj",
     "Groups": "Grupoj",
     "Member": "Uzanto",
     "Tracking": "Tracking",
