--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "\u062a\u0642\u0648\u06cc\u0645",
     "Announcement": "\u0627\u0637\u0644\u0627\u0639\u06cc\u0647 \u0647\u0627",
+    "Announcements": "\u0627\u0637\u0644\u0627\u0639\u06cc\u0647 \u0647\u0627",
     "Attendance": "\u0634\u0631\u06a9\u062a",
+    "Attendances": "\u062d\u0636\u0648\u0631 \u063a\u06cc\u0627\u0628",
     "Course description": "\u062a\u0648\u0636\u06cc\u062d\u0627\u062a \u062f\u0631\u0633",
     "Course progress": "\u0631\u0648\u0646\u062f \u067e\u06cc\u0634\u0631\u0641\u062a \u062f\u0631\u0633",
     "Documents": "\u0627\u0633\u0646\u0627\u062f",
@@ -9,9 +11,11 @@
     "Forum": "\u0627\u0646\u062c\u0645\u0646",
     "Glossary": "\u0648\u0627\u0698\u0647 \u0646\u0627\u0645\u0647",
     "Link": "\u067e\u06cc\u0648\u0646\u062f",
+    "Links": "\u067e\u06cc\u0648\u0646\u062f\u0647\u0627",
     "Groups": "\u06af\u0631\u0648\u0647 \u0647\u0627",
     "Member": "\u0627\u0639\u0636\u0627\u0621",
     "Survey": "\u0628\u0631\u0631\u0633\u06cc",
+    "Surveys": "\u0628\u0631\u0631\u0633\u06cc",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
