--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "\u041a\u0430\u043b\u0435\u043d\u0434\u0430\u0440",
     "Announcement": "\u0421\u043e\u043e\u043f\u0448\u0442\u0435\u043d\u0438\u0435",
+    "Announcements": "\u0418\u0437\u0432\u0435\u0441\u0442\u0443\u0432\u0430\u045a\u0430",
     "Documents": "\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0438",
     "Tests": "\u0422\u0435\u0441\u0442\u043e\u0432\u0438",
     "Forum": "\u0424\u043e\u0440\u0443\u043c\u0438",
     "Link": "\u0412\u0440\u0441\u043a\u0430",
+    "Links": "\u041b\u0438\u043d\u043a\u043e\u0432\u0438",
     "Groups": "\u0413\u0440\u0443\u043f\u0438",
     "Member": "\u0427\u043b\u0435\u043d",
     "Survey": "\u0410\u043d\u043a\u0435\u0442\u0430",
