--- a/assets/locales/oc.json
+++ b/assets/locales/oc.json
@@ -1,7 +1,9 @@
 {
     "Agenda": "Agenda",
     "Announcement": "Announcement",
+    "Announcements": "Announcements",
     "Attendance": "Attendance",
+    "Attendances": "Attendances",
     "Course description": "Course description",
     "Course progress": "Course progress",
     "Documents": "Documents",
@@ -9,9 +11,11 @@
     "Forum": "Forum",
     "Glossary": "Glossary",
     "Link": "Link",
+    "Links": "Links",
     "Groups": "Groups",
     "Member": "Member",
     "Survey": "Survey",
+    "Surveys": "Surveys",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
     "Course setting": "Course setting",
