--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -1,10 +1,12 @@
 {
     "Agenda": "\u0e01\u0e33\u0e2b\u0e19\u0e14\u0e01\u0e32\u0e23",
     "Announcement": "\u0e1b\u0e23\u0e30\u0e01\u0e32\u0e28",
+    "Announcements": "\u0e1b\u0e23\u0e30\u0e01\u0e32\u0e28",
     "Documents": "\u0e40\u0e2d\u0e01\u0e2a\u0e32\u0e23",
     "Tests": "\u0e41\u0e1a\u0e1a\u0e17\u0e14\u0e2a\u0e2d\u0e1a",
     "Forum": "\u0e01\u0e32\u0e23\u0e2d\u0e20\u0e34\u0e1b\u0e23\u0e32\u0e22",
     "Link": "\u0e01\u0e32\u0e23\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e42\u0e22\u0e07",
+    "Links": "\u0e01\u0e32\u0e23\u0e40\u0e0a\u0e37\u0e48\u0e2d\u0e21\u0e42\u0e22\u0e07",
     "Groups": "\u0e01\u0e25\u0e38\u0e48\u0e21",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
