--- a/assets/locales/uk_UA.json
+++ b/assets/locales/uk_UA.json
@@ -1,9 +1,11 @@
 {
     "Agenda": "\u041a\u0430\u043b\u0435\u043d\u0434\u0430\u0440",
     "Announcement": "\u041e\u0433\u043e\u043b\u043e\u0448\u0435\u043d\u043d\u044f",
+    "Announcements": "\u041e\u0433\u043e\u043b\u043e\u0448\u0435\u043d\u043d\u044f",
     "Documents": "\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0438",
     "Tests": "\u0422\u0435\u0441\u0442\u0438",
     "Forum": "\u0424\u043e\u0440\u0443\u043c\u0438",
+    "Links": "\u041f\u043e\u0441\u0438\u043b\u0430\u043d\u043d\u044f",
     "Groups": "\u0413\u0440\u0443\u043f\u0438",
     "Member": "\u0427\u043b\u0435\u043d",
     "Survey": "\u041e\u043f\u0438\u0442\u0443\u0432\u0430\u043d\u043d\u044f",
