--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -17,7 +17,7 @@
     "Survey": "Enqu\u00eate",
     "Surveys": "Enqu\u00eates",
     "Tracking": "Tracking",
-    "Course maintenance": "Course maintenance",
+    "Course maintenance": "Maintenance du cours",
     "Course setting": "Course setting",
     "Sign in": "Connectez-vous",
     "My courses": "Mes cours",
@@ -314,7 +314,7 @@
     "Your company short name": "Nom abr\u00e9g\u00e9 de l'organisation",
     "URL of this company": "URL de l'organisme/l'entreprise",
     "Encryption method": "M\u00e9thode de cryptage",
-    "None": "None",
+    "None": "Aucun(e)",
     "Allow self-registration": "Auto-inscription autoris\u00e9e",
     "After approval": "Apr\u00e8s approbation",
     "Allow self-registration as a trainer": "Autoriser l'auto-inscription en tant que cr\u00e9ateur de cours",
@@ -402,21 +402,21 @@
     "Pick success color": "Pick success color",
     "Pick success color gradient": "Pick success color gradient",
     "Pick danger color": "Pick danger color",
-    "You can see examples of how chamilo will look here": "You can see examples of how chamilo will look here",
-    "Buttons": "Buttons",
+    "You can see examples of how chamilo will look here": "Vous pouvez voir des exemples de l'apparence de Chamilo ici",
+    "Buttons": "Boutons",
     "Button": "Button",
     "Disabled": "D\u00e9sactiv\u00e9",
     "Secondary": "Secondaire",
-    "Tertiary": "Tertiary",
+    "Tertiary": "Tertiaire",
     "Success": "R\u00e9ussite",
     "Danger": "Danger",
     "Menu on button pressed": "Menu on button pressed",
-    "Checkbox and radio buttons": "Checkbox and radio buttons",
+    "Checkbox and radio buttons": "Cases \u00e0 cocher et boutons radio",
     "Checkbox 1": "Checkbox 1",
     "Checkbox 2": "Checkbox 2",
     "This is a text example": "This is a text example",
     "Show dialog": "Show dialog",
-    "Dialog example": "Dialog example",
+    "Dialog example": "Exemple de la bo\u00eete de dialogue",
     "Item 1": "Item 1",
     "Item 2": "Item 2",
     "Item 3": "Item 3",
@@ -449,9 +449,9 @@
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
     "Edit introduction": "Edit introduction",
     "Show all": "Afficher tout",
-    "Hide all": "Hide all",
-    "Sort": "Sort",
-    "Customize": "Customize",
+    "Hide all": "Masquer tout",
+    "Sort": "Trier",
+    "Customize": "Personnaliser",
     "Updated": "Mise \u00e0 jour enregistr\u00e9e",
     "Create certificate": "Cr\u00e9er un certificat",
     "New drawing": "New drawing",
